Correción en la enumeración y categorización de módulos

--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -2,7 +2,7 @@
 
 ## Módulo de Comunicación
 
-### **UC1-Mensajería one-to-one:**
+### **UCC1-Mensajería one-to-one:**
 
 ![UC3-Message](/PNGs/Prototipos/Caso_3_Message_Page.png)
 
@@ -12,7 +12,7 @@
 **Postcondiciones:** Envio de un mensaje directo al chat del otro usuario.  
 **Activador:** Un usuario quiere enviar un mensaje directo.
 
-### **UC2-Mensajería de grupo:**
+### **UCC2-Mensajería de grupo:**
 
 **Descripción:** Los usuarios podrán crear y unirse a grupos de chat, ya sean por curso, grupo de trabajo, etc.  
 **Actores:** Sistema y usuarios.  
@@ -20,7 +20,7 @@
 **Postcondiciones:** Los grupos de chat son creados y se realizan envio de mensajes.  
 **Activador:** Un usuario desea crear y enviar mensajes a un chat grupal.
 
-### **UC3-Anuncios y notificaciones:**
+### **UCC3-Anuncios y notificaciones:**
 
 **Descripción:** Los profesores y el personal administrativo podrán enviar anuncios y notificaciones importantes a los grupos de estudiantes o a toda la institución.  
 **Actores:** Sistema, profesores y personal administrativo.  
@@ -28,7 +28,7 @@
 **Postcondiciones:** Los anuncios y notificaciones son enviados y recibidos por los estudiantes.  
 **Activador:** El profesor o personal administrativo decide enviar un anuncio o notificación.
 
-### **UC4-Compartir archivos:**
+### **UCC4-Compartir archivos:**
 
 **Descripción:** Todos los usuarios podrán compartir archivos multimedia, documentos, presentaciones, etc., dentro de los chats individuales o de grupo.  
 **Actores:** Sistema y usuarios.  
@@ -36,21 +36,21 @@
 **Postcondiciones:** Los archivos compartidos están disponibles para todos los participantes del chat.  
 **Activador:** Un usuario decide compartir un archivo dentro de un chat individual o de grupo.
 
-### **UC5-Borrado de mensajes:**
+### **UCC5-Borrado de mensajes:**
 **Descripción:** Todos los usuarios podrán eliminar los mensajes posterior a su envío, pero no después de pasadas 24 horas de su envío, esto dentro de los chats individuales o de grupo.  
 **Actores:** Sistema y usuarios.  
 **Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Haber enviado un mensaje.  
 **Postcondiciones:** El mensaje seleccionado debe de haberse borrado del historial de mensajes.  
 **Activador:**  Un usuario decido eliminar un mensaje dentro de un chat individual o grupal.  
 
-### **UC6-Indicadores de Lectura:**
+### **UCC6-Indicadores de Lectura:**
 **Descripción:** Todos los usuarios podrán ver el estado de su mensaje, primero si es que ha sido enviado, posterior si es que este ha sido recibido y por último, si este ha sido leido por el o los destinatarios.  
 **Actores:** Sistema y usuarios.  
 **Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Haber enviado un mensaje.  
 **Postcondiciones:**  El mensaje en cuestión contara con un estatus en el que se entenderá si se encuentra como enviado, recibido o leido.  
 **Activador:** El usuario decide corroborar en qué estado se encuentra el mensaje una vez fue enviado.  
 
-### **UC7-Búsqueda de mensajes:**
+### **UCC7-Búsqueda de mensajes:**
 **Descripción:** Todos los usuarios podrán buscar uno o varios mensajes que contengan una palabra clave. Por ejemplo, podrán buscar todos los mensajes que contengan la palabra "tarea".  
 **Actores:** Sistema y usuarios.  
 **Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Pertenecer a un chat one-to-one o grupal. / En ese grupo debe haber al menos un mensaje.  
@@ -59,7 +59,7 @@
 
 ## Módulo de Gestión de Usuarios
 
-### **UC1-Registro e inicio de sesión con roles definidos:**
+### **UCG1-Registro e inicio de sesión con roles definidos:**
 
 ![UC1-Register1](/PNGs/Prototipos/Caso_1_Register_Page_1.png) ![UC1-Register2](/PNGs/Prototipos/Caso_1_Register_Page_2.png) ![UC1-Login](/PNGs/Prototipos/Caso_1_Log_in_Page.png)
 
@@ -69,7 +69,7 @@
 **Postcondiciones:** Se registra e inicia sesión de un usuario dentro del sistema.  
 **Activador:** Un usuario decide registrarse en la página web.
 
-### **UC2-Perfiles de usuario:**
+### **UCG2-Perfiles de usuario:**
 
 ![UC2-Perfil](/PNGs/Prototipos/Caso_2_Perfil_Page.png)
 
@@ -79,33 +79,33 @@
 **Postcondiciones:** Mostrar datos del usuario con la sesión iniciada.  
 **Activador:** Un usuario decide ingresar a su perfil.
 
-### **UC3-Búsqueda de usuarios y cursos:**
+### **UCG3-Búsqueda de usuarios:**
 
-**Descripción:** Los usuarios podrán buscar y encontrar a otros usuarios o cursos específicos dentro de la página web.  
+**Descripción:** Los usuarios podrán buscar y encontrar a otros usuarios dentro de la página web.  
 **Actores:** Sistema y usuarios.  
 **Precondiciones:** Haber accedido a la página web. / Tener acceso a internet.  
-**Postcondiciones:** Los usuarios pueden ver los resultados de búsqueda y acceder a los perfiles de usuarios o detalles de cursos.
-**Activador:** Un usuario decide buscar a otro usuario o un curso.
+**Postcondiciones:** Los usuarios pueden ver los resultados de búsqueda y acceder a los perfiles de usuarios.
+**Activador:** Un usuario decide buscar a otro usuario.
 
-### **UC1-:**
-**Descripción:** 
-**Actores:** 
-**Precondiciones:** 
-**Postcondiciones:** 
-**Activador:** 
+### **UCG4-:**
+**Descripción:**   
+**Actores:**   
+**Precondiciones:**   
+**Postcondiciones:**   
+**Activador:**   
 
 ## Módulo de Administración y Moderación 
 
-### **UC1-:**
-**Descripción:** 
-**Actores:** 
-**Precondiciones:** 
-**Postcondiciones:** 
-**Activador:** 
+### **UCA1-:**
+**Descripción:**   
+**Actores:**   
+**Precondiciones:**   
+**Postcondiciones:**   
+**Activador:**   
 
 ## Módulo de Integraciones de Terceros 
 
-### **UCX-Integración con Plataformas LMS:**
+### **UCI1-Integración con Plataformas LMS:**
 
 **Descripción:** La página web puede integrarse con sistemas de gestión educativa que utilice la universidad para visualizar cursos o anuncios de este.  
 **Actores:** Sistema y usuarios.  
@@ -113,7 +113,7 @@
 **Postcondiciones:** Los usuarios pueden acceder a los contenidos del LMS / Los datos del LMS se sincronizan correctamente.  
 **Activador:** Un usuario decide consultar contenidos educativos del LMS.
 
-### **UCX-Integración con Google Calendar:**
+### **UCI2-Integración con Google Calendar:**
 
 **Descripción:** La página web se integra con Google Calendar para sincronizar eventos del usuario.  
 **Actores:** Sistema y usuarios.  
@@ -121,7 +121,7 @@
 **Postcondiciones:** Los usuarios podran visualizar los eventos y horarios de Google Calendar dentro de la página web.  
 **Activador:** Un usuario decide agregar o consultar un evento en el calendario académico.
 
-### **UCX-Integración con Herramientas de Videoconferencia:**
+### **UCI3-Integración con Herramientas de Videoconferencia:**
 
 **Descripción:** La página web se integra con las herramientas de videoconferencia que utilize la universidad para facilitar las reuniones.  
 **Actores:** Sistema y usuarios.  
@@ -129,14 +129,14 @@
 **Postcondiciones:** Los usuarios pueden iniciar y unirse a reuniones desde la página web.  
 **Activador:** Un usuario decide iniciar o unirse a una reunión o desde la página web.
 
-### **UCX-Integración con Servicios de Almacenaje en la Nube:**
+### **UCI4-Integración con Servicios de Almacenaje en la Nube:**
 
 **Descripción:** La página web se integra con servicios de almacenaiento en la nube para acceder y compartir archivos dentro de la página web.  
 **Precondiciones:** Haber accedido a la página web / Tener acceso a internet / Integracion configurada con los servicios.  
 **Postcondiciones:** Los usuarios pueden acceder y compartir archivos de la nube mediante la página web.  
 **Activador:** Un usuario quiere enviar un archivo a algún chat.
 
-### **UCX-Integración con Servicios de la Universidad:**
+### **UCI5-Integración con Servicios de la Universidad:**
 
 **Descripción:** La página web se integra con los servicios propios que brinda la misma universidad, tales como calificaciones, anuncios de la propia universidad.  
 **Actores:** Sistema, usuarios y representante del sistema externo.  
@@ -144,7 +144,7 @@
 **Postcondiciones:** Los usuarios pueden consultar los servicios de la universidad dentro de la página web.  
 **Activador:** Un usuario decide visualizar sus notas o avisos de la universidad dentro de la página web.
 
-### **UCX-Uso de Single-Sign-On(SSO):**
+### **UCI6-Uso de Single-Sign-On(SSO):**
 
 **Descripción:** La página web admite el SSO con servicios externos para facilitar el acceso de los usuarios.  
 **Actores:** Sistema y usuarios.  
