--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -64,28 +64,28 @@
 ![UC1-Register1](/PNGs/Prototipos/Caso_1_Register_Page_1.png) ![UC1-Register2](/PNGs/Prototipos/Caso_1_Register_Page_2.png) ![UC1-Login](/PNGs/Prototipos/Caso_1_Log_in_Page.png)
 
 **Descripción:** La página web debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
-**Actores:** Sistema y usuario  
-**Precondiciones:** Una cuenta de usuario previamente registrada  
-**Postcondiciones:** Se registra e inicia sesión de un usuario dentro del sistema.  
-**Activador:** Un usuario decide registrarse en la página web.
+**Actores:** Usuarios (alumnos, profesores, personal docente). 
+**Precondiciones:** Una cuenta de usuario previamente registrada, la aplicación debe estar conectada a un servicio de autenticación y base de datos.
+**Postcondiciones:** El usuario tiene una cuenta creada y puede iniciar sesión en la aplicación, los datos del usuario están almacenados en la base de datos de forma segura.
+**Activador:** El usuario selecciona la opción de registro en la pantalla de inicio.
 
 ### **UCG2-Perfiles de usuario:**
 
 ![UC2-Perfil](/PNGs/Prototipos/Caso_2_Perfil_Page.png)
 
 **Descripción:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
-**Actores:** Sistema y usuario.  
-**Precondiciones:** - Una cuenta de usuario previamente registrada. / Haber accedido a la página web.
-**Postcondiciones:** Mostrar datos del usuario con la sesión iniciada.  
-**Activador:** Un usuario decide ingresar a su perfil.
+**Actores:** Usuarios (alumnos, profesores, personal docente).
+**Precondiciones:** El usuario debe estar autenticado en la aplicación.
+**Postcondiciones:** La información del perfil del usuario se actualiza en la base de datos, los cambios en el perfil se reflejan en la interfaz de usuario.
+**Activador:** El usuario selecciona la opción de editar perfil desde el panel de usuario.
 
-### **UCG3-Búsqueda de usuarios:**
+### **UCG3-Asignación y gestión de roles y permisos (alumnos, profesores, personal docente):**
 
-**Descripción:** Los usuarios podrán buscar y encontrar a otros usuarios dentro de la página web.  
-**Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet.  
-**Postcondiciones:** Los usuarios pueden ver los resultados de búsqueda y acceder a los perfiles de usuarios.
-**Activador:** Un usuario decide buscar a otro usuario.
+**Descripción:** Proceso mediante el cual se asignan roles específicos a los usuarios y se gestionan los permisos asociados a cada rol.  
+**Actores:** Administradores, Usuarios.  
+**Precondiciones:** - Administradores, Usuarios. - El usuario debe estar registrado y autenticado.
+**Postcondiciones:** - Los usuarios tienen asignados roles específicos con permisos adecuados. - Los cambios en los roles y permisos se guardan en la base de datos.
+**Activador:** El administrador accede al panel de administración y selecciona la opción de gestión de roles.
 
 ### **UCG4-:**
 **Descripción:**   
