--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -76,23 +76,23 @@
 **Descripción:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
 **Actores:** Usuarios (alumnos, profesores, personal docente).
 **Precondiciones:** El usuario debe estar autenticado en la aplicación.
-**Postcondiciones:** La información del perfil del usuario se actualiza en la base de datos, los cambios en el perfil se reflejan en la interfaz de usuario.
+**Postcondiciones:** La información del perfil del usuario se actualiza en la base de datos. / Los cambios en el perfil se reflejan en la interfaz de usuario.
 **Activador:** El usuario selecciona la opción de editar perfil desde el panel de usuario.
 
 ### **UCG3-Asignación y gestión de roles y permisos (alumnos, profesores, personal docente):**
 
 **Descripción:** Proceso mediante el cual se asignan roles específicos a los usuarios y se gestionan los permisos asociados a cada rol.  
 **Actores:** Administradores, Usuarios.  
-**Precondiciones:** - Administradores, Usuarios. - El usuario debe estar registrado y autenticado.
-**Postcondiciones:** - Los usuarios tienen asignados roles específicos con permisos adecuados. - Los cambios en los roles y permisos se guardan en la base de datos.
+**Precondiciones:** Administradores, Usuarios. / El usuario debe estar registrado y autenticado.
+**Postcondiciones:** Los usuarios tienen asignados roles específicos con permisos adecuados. / Los cambios en los roles y permisos se guardan en la base de datos.
 **Activador:** El administrador accede al panel de administración y selecciona la opción de gestión de roles.
 
-### **UCG4-:**
-**Descripción:**   
-**Actores:**   
-**Precondiciones:**   
-**Postcondiciones:**   
-**Activador:**   
+### **UCG4-:Recuperación de contraseñas y manejo de sesiones**
+**Descripción:** Proceso que permite a los usuarios recuperar su contraseña en caso de olvido y gestionar sus sesiones activas.
+**Actores:** Usuarios (alumnos, profesores, personal docente).
+**Precondiciones:** La aplicación debe tener un sistema de manejo de sesiones.
+**Postcondiciones:** El usuario recibe un enlace para restablecer su contraseña. / La nueva contraseña se actualiza en la base de datos y el usuario puede iniciar sesión nuevamente.
+**Activador:** El usuario selecciona la opción de "Olvidé mi contraseña" en la pantalla de inicio de sesión.
 
 ## Módulo de Administración y Moderación 
 
