--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -95,6 +95,22 @@
 **Postcondiciones:** El usuario recibe un enlace para restablecer su contraseña. / La nueva contraseña se actualiza en la base de datos y el usuario puede iniciar sesión nuevamente.       
 **Activador:** El usuario selecciona la opción de "Olvidé mi contraseña" en la pantalla de inicio de sesión.    
 
+### **UCG5-:Verificación de correo electrónico**
+
+**Descripción:** Proceso mediante el cual el usuario verifica su dirección de correo electrónico para activar su cuenta.     
+**Actores:** Usuarios (alumnos, profesores, personal docente).      
+**Precondiciones:** El usuario debe haberse registrado en la aplicación. / El usuario debe proporcionar una dirección de correo electrónico válida.      
+**Postcondiciones:** La dirección de correo electrónico del usuario está verificada y la cuenta se activa. / El estado de verificación se actualiza en la base de datos.       
+**Activador:** El usuario recibe un correo electrónico con un enlace de verificación tras el registro.  
+
+### **UCG6-:Panel de usuario para configuraciones personales**
+
+**Descripción:** Un área dentro de la aplicación donde los usuarios pueden ajustar configuraciones personales y preferencias.     
+**Actores:** Usuarios (alumnos, profesores, personal docente).      
+**Precondiciones:** El usuario debe estar autenticado en la aplicación.      
+**Postcondiciones:** Las preferencias y configuraciones del usuario se guardan en la base de datos. / Los cambios se reflejan en la experiencia del usuario en la aplicación.       
+**Activador:** El usuario accede al panel de configuraciones personales desde su perfil.  
+
 ## Módulo de Administración y Moderación 
 
 ### **UCA1-:**
