Estructura básica para el 2.2

--- a/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
@@ -2,8 +2,22 @@
 
 ## Módulo de Comunicación
 
+|Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
+|-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
+|*rellenar aquí*|ESCC-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|
+
 ## Módulo de Gestión de Usuarios
+|Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
+|-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
+|*rellenar aquí*|ESCG-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|
 
 ## Módulo de Administración y Moderación 
+|Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
+|-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
+|*rellenar aquí*|ESCA-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|
 
 ## Módulo de Integraciones de Terceros 
+
+|Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
+|-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
+|*rellenar aquí*|ESCI-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|
