--- a/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
@@ -4,20 +4,23 @@
 
 |Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
 |-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
-|*rellenar aquí*|ESCC-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|
+|Escalabilidad|ESCC-01|Crecimiento de la cantidad de estudiantes|Aumento del número de usuarios|Aumento del número de mensajes|Módulo de comunicación|El sistema debe permitir el envío de un alto volumen de mensajes|Capacidad máxima de usuarios concurrentes|
+|Usabilidad|ESCC-02|Facilidad de uso de la ventana de chat|Usuarios finales|Interfaz de ventana de chat|Módulo de comunicación|La inferfaz de chat debe ser fácil de usar para los usuarios finales|Evaluaciones de usabilidad|
+|Disponibilidad|ESCC-03|Disponibilidad 24/7|Usuarios finales|Acceso a la ventana de chat|Módulo de comunicación|La ventana de chat debe estar disponible las 24 horas del día, los 7 días de la semana|Disponibilidad del 99.9%|
+|Escalabilidad|ESCC-04|Ventana de chat|Cambios en la forma en cómo se maneja internamente el chat|Introducción de nuevas funcionalidades|Módulo de comunicación|Los usuarios finales reclaman por nuevas funcionalidades las cuales deben ser implementadas|El 90% de los usuarios deben responder de forma alta en encuestas de satisfacción|
 
 ## Módulo de Gestión de Usuarios
 |Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
 |-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
-|*rellenar aquí*|ESCG-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|
+|*rellenar aquí*|ESCG-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|Módulo de Gestión de Usuarios|*rellenar aquí*|*rellenar aquí*|
 
 ## Módulo de Administración y Moderación 
 |Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
 |-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
-|*rellenar aquí*|ESCA-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|
+|*rellenar aquí*|ESCA-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|Módulo de Administración y Moderación|*rellenar aquí*|*rellenar aquí*|
 
 ## Módulo de Integraciones de Terceros 
 
 |Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
 |-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
-|*rellenar aquí*|ESCI-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|
+|*rellenar aquí*|ESCI-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|Módulo de Integraciones de Terceros|*rellenar aquí*|*rellenar aquí*|
