Formateo y Linkeo de todas las páginas, creo que ya final

--- a/Partes del Indice/1. Caso de Negocio/1.2 Modelo de Negocio.md
+++ b/Partes del Indice/1. Caso de Negocio/1.2 Modelo de Negocio.md
@@ -1,4 +1,4 @@
-## 1.2 Modelo de Negocio
+# 1.2 Modelo de Negocio
 El modelo de negocio se basa en las siguientes características
 
 __1. Segmento de clientes__
