--- a/Partes del Indice/1. Caso de Negocio/1.3 Estructura de Equipo.md
+++ b/Partes del Indice/1. Caso de Negocio/1.3 Estructura de Equipo.md
@@ -1,4 +1,4 @@
-## 1.3 Estructura del Equipo
+# 1.3 Estructura del Equipo
 En esta sección se presentará el organigrama del la startup y se describirán los roles presentes en la estructura organizativa del equipo.
 
 - CEO: Es la persona que ocupa el puesto más alto en nuestra organización. Se engarga de establecer la visión de la empresa, además de tomar decisiones estratégicas y gestionar las finanzas de la empresa.
@@ -14,4 +14,5 @@ En esta sección se presentará el organigrama del la startup y se describirán 
 - Soporte de TI: Area encargada que brinda asistencia a los usuarios de tecnología, como computadoras, redes, software y dispositivos móviles. Su objetivo principal es resolver problemas técnicos, responder preguntas y brindar orientación a los usuarios para que puedan utilizar la tecnología de manera eficiente y segura.
 
 ![Estructura del equipo](/PNGs/Organigrama.jpeg)
+
 [Regresar al índice](../../README.md)
