--- a/Partes del Indice/1. Caso de Negocio/1.4 Listado de Stakeholders.md
+++ b/Partes del Indice/1. Caso de Negocio/1.4 Listado de Stakeholders.md
@@ -1,4 +1,4 @@
-## 1.4 Stakeholders
+# 1.4 Stakeholders
 - Analistas: Encargados de analizar la arquitectura y contrastarla con los requerimientos de calidad definidos. De este rol se va a encargar el equipo de desarrollo
 - Arquitecto: Encargados del desarrollo de la arquitectura y su documentación. Se este rol se encargarán los arquitectos de software.
 - Gestor de negocio: Es el responsable de la unidad de negocio que posee le sistema. Tiene responsabilidad ejecutiva y de definición de los procesos del negocio. De este rol se encarga el CEO.
@@ -15,4 +15,5 @@
 - Jefe de proyecto: Encargado de la planificación, programación y asignación de recursos para desarrollar los componentes y liberarlos para pruebas de integración. De este rol se va encargar el director de proyecto.
 - Responsable de pruebas: Es el responsable del manejo de un sistema con el que debermos interactuar. Para este rol se encargará el evaluador de producto y QA.
 -  Usuarios finales: Son los usuarios finales que usarán el sistema. En este caso, serán los estudiantes, profesores, jefes de practica y personal administrativo.
+
 [Regresar al índice](../../README.md)
