--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -1,10 +1,8 @@
-# Requerimientos Funcionales:
+# 2.1 Requerimientos Funcionales
 
 ## Módulo de Comunicación
 
 ### **UCC1-Mensajería one-to-one:**
-
-![UC3-Message](/PNGs/Prototipos/Caso_3_Message_Page.png)
 
 **Descripción:** Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
 **Actores:** Sistema y usuarios.  
@@ -61,8 +59,6 @@
 
 ### **UCG1-Registro e inicio de sesión con roles definidos:**
 
-![UC1-Register1](/PNGs/Prototipos/Caso_1_Register_Page_1.png) ![UC1-Register2](/PNGs/Prototipos/Caso_1_Register_Page_2.png) ![UC1-Login](/PNGs/Prototipos/Caso_1_Log_in_Page.png)
-
 **Descripción:** La página web debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.       
 **Actores:** Usuarios (alumnos, profesores, personal docente).       
 **Precondiciones:** Una cuenta de usuario previamente registrada, la aplicación debe estar conectada a un servicio de autenticación y base de datos.        
@@ -70,8 +66,6 @@
 **Activador:** El usuario selecciona la opción de registro en la pantalla de inicio.        
 
 ### **UCG2-Perfiles de usuario:**
-
-![UC2-Perfil](/PNGs/Prototipos/Caso_2_Perfil_Page.png)
 
 **Descripción:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.      
 **Actores:** Usuarios (alumnos, profesores, personal docente).      
@@ -87,7 +81,7 @@
 **Postcondiciones:** Los usuarios tienen asignados roles específicos con permisos adecuados. / Los cambios en los roles y permisos se guardan en la base de datos.      
 **Activador:** El administrador accede al panel de administración y selecciona la opción de gestión de roles.       
 
-### **UCG4-:Recuperación de contraseñas y manejo de sesiones**
+### **UCG4-Recuperación de contraseñas y manejo de sesiones:**
 
 **Descripción:** Proceso que permite a los usuarios recuperar su contraseña en caso de olvido y gestionar sus sesiones activas.     
 **Actores:** Usuarios (alumnos, profesores, personal docente).      
@@ -95,7 +89,7 @@
 **Postcondiciones:** El usuario recibe un enlace para restablecer su contraseña. / La nueva contraseña se actualiza en la base de datos y el usuario puede iniciar sesión nuevamente.       
 **Activador:** El usuario selecciona la opción de "Olvidé mi contraseña" en la pantalla de inicio de sesión.    
 
-### **UCG5-:Verificación de correo electrónico**
+### **UCG5-Verificación de correo electrónico:**
 
 **Descripción:** Proceso mediante el cual el usuario verifica su dirección de correo electrónico para activar su cuenta.     
 **Actores:** Usuarios (alumnos, profesores, personal docente).      
@@ -103,7 +97,7 @@
 **Postcondiciones:** La dirección de correo electrónico del usuario está verificada y la cuenta se activa. / El estado de verificación se actualiza en la base de datos.       
 **Activador:** El usuario recibe un correo electrónico con un enlace de verificación tras el registro.  
 
-### **UCG6-:Panel de usuario para configuraciones personales**
+### **UCG6-Panel de usuario para configuraciones personales:**
 
 **Descripción:** Un área dentro de la aplicación donde los usuarios pueden ajustar configuraciones personales y preferencias.     
 **Actores:** Usuarios (alumnos, profesores, personal docente).      
@@ -169,20 +163,5 @@
 **Postcondiciones:** Los usuarios pueden iniciar sesión en distintos servicios dentro de la aplicacion con un unico inicio de sesión.  
 **Activador:** Un usuario decide iniciar sesión a la aplicacion para visualizar algún servicio externo.
 
+
 [Regresar al índice](../../README.md)
-
-### **UCX-Gestión de cursos:**
-
-**Descripción:** Los profesores podrán crear y gestionar cursos, agregar alumnos y personal administrativo, compartir materiales, etc.  
-**Actores:** Sistema y profesores.  
-**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Iniciar sesión como profesor.  
-**Postcondiciones:** El curso es creado y queda disponible para que los alumnos se inscriban.  
-**Activador:** El profesor decide crear o gestionar un curso.
-
-### **UCX-Calendario académico:**
-
-**Descripción:** La página web debe incluir un calendario académico donde se muestren eventos importantes, fechas límite, horarios de clase, etc.  
-**Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet.  
-**Postcondiciones:** El calendario académico se actualiza y está visible para todos los usuarios.  
-**Activador:** Un usuario decide agregar o consultar un evento en el calendario académico.
