--- a/Partes del Indice/2. Requerimientos del Sistema/2.3 Restricciones.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.3 Restricciones.md
@@ -1,4 +1,4 @@
-## Restricciones:
+# 2.3 Restricciones
 
 - Es necesario el uso de una base de datos relacional debido a estandares de las universidades.
 - La página web debe ser accesible por cualquier tipo de usuario de las universidades, incluyendo personas con discapacidad.
