--- a/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
@@ -2,27 +2,34 @@
 
 ## Módulo de Comunicación
 
-|Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
-|-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
-|Escalabilidad|ESCC-01|Crecimiento de la cantidad de estudiantes|Aumento del número de usuarios|Aumento del número de mensajes|Módulo de comunicación|El sistema debe permitir el envío de un alto volumen de mensajes|Capacidad máxima de usuarios concurrentes|
-|Usabilidad|ESCC-02|Facilidad de uso de la ventana de chat|Usuarios finales|Interfaz de ventana de chat|Módulo de comunicación|La inferfaz de chat debe ser fácil de usar para los usuarios finales|Evaluaciones de usabilidad|
-|Disponibilidad|ESCC-03|Disponibilidad 24/7|Usuarios finales|Acceso a la ventana de chat|Módulo de comunicación|La ventana de chat debe estar disponible las 24 horas del día, los 7 días de la semana|Disponibilidad del 99.9%|
-|Escalabilidad|ESCC-04|Ventana de chat|Cambios en la forma en cómo se maneja internamente el chat|Introducción de nuevas funcionalidades|Módulo de comunicación|Los usuarios finales reclaman por nuevas funcionalidades las cuales deben ser implementadas|El 90% de los usuarios deben responder de forma alta en encuestas de satisfacción|
+| Atributo       | Código  | Entorno                                   | Fuente                                                     | Estímulo                               | Artefacto              | Respuesta                                                                                   | Medida de Respuesta                                                               |
+| -------------- | ------- | ----------------------------------------- | ---------------------------------------------------------- | -------------------------------------- | ---------------------- | ------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------- |
+| Escalabilidad  | ESCC-01 | Crecimiento de la cantidad de estudiantes | Aumento del número de usuarios                             | Aumento del número de mensajes         | Módulo de comunicación | El sistema debe permitir el envío de un alto volumen de mensajes                            | Capacidad máxima de usuarios concurrentes                                         |
+| Usabilidad     | ESCC-02 | Facilidad de uso de la ventana de chat    | Usuarios finales                                           | Interfaz de ventana de chat            | Módulo de comunicación | La inferfaz de chat debe ser fácil de usar para los usuarios finales                        | Evaluaciones de usabilidad                                                        |
+| Disponibilidad | ESCC-03 | Disponibilidad 24/7                       | Usuarios finales                                           | Acceso a la ventana de chat            | Módulo de comunicación | La ventana de chat debe estar disponible las 24 horas del día, los 7 días de la semana      | Disponibilidad del 99.9%                                                          |
+| Escalabilidad  | ESCC-04 | Ventana de chat                           | Cambios en la forma en cómo se maneja internamente el chat | Introducción de nuevas funcionalidades | Módulo de comunicación | Los usuarios finales reclaman por nuevas funcionalidades las cuales deben ser implementadas | El 90% de los usuarios deben responder de forma alta en encuestas de satisfacción |
 
 ## Módulo de Gestión de Usuarios
-|Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
-|-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
-|*rellenar aquí*|ESCG-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|Módulo de Gestión de Usuarios|*rellenar aquí*|*rellenar aquí*|
 
-## Módulo de Administración y Moderación 
-|Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
-|-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
-|*rellenar aquí*|ESCA-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|Módulo de Administración y Moderación|*rellenar aquí*|*rellenar aquí*|
+| Atributo        | Código  | Entorno         | Fuente          | Estímulo        | Artefacto                     | Respuesta       | Medida de Respuesta |
+| --------------- | ------- | --------------- | --------------- | --------------- | ----------------------------- | --------------- | ------------------- |
+| _rellenar aquí_ | ESCG-01 | _rellenar aquí_ | _rellenar aquí_ | _rellenar aquí_ | Módulo de Gestión de Usuarios | _rellenar aquí_ | _rellenar aquí_     |
 
-## Módulo de Integraciones de Terceros 
+## Módulo de Administración y Moderación
 
-|Atributo|Código|Entorno|Fuente|Estímulo|Artefacto|Respuesta|Medida de Respuesta
-|-------------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|
-|*rellenar aquí*|ESCI-01|*rellenar aquí*|*rellenar aquí*|*rellenar aquí*|Módulo de Integraciones de Terceros|*rellenar aquí*|*rellenar aquí*|
+| Atributo        | Código  | Entorno         | Fuente          | Estímulo        | Artefacto                             | Respuesta       | Medida de Respuesta |
+| --------------- | ------- | --------------- | --------------- | --------------- | ------------------------------------- | --------------- | ------------------- |
+| _rellenar aquí_ | ESCA-01 | _rellenar aquí_ | _rellenar aquí_ | _rellenar aquí_ | Módulo de Administración y Moderación | _rellenar aquí_ | _rellenar aquí_     |
+
+## Módulo de Integraciones de Terceros
+
+| Atributo          | Código  | Entorno                    | Fuente               | Estímulo                                                       | Artefacto                           | Respuesta                                           | Medida de Respuesta                                   |
+| ----------------- | ------- | -------------------------- | -------------------- | -------------------------------------------------------------- | ----------------------------------- | --------------------------------------------------- | ----------------------------------------------------- |
+| Rendimiento       | ESCI-01 | Operaciones normales       | Usuarios             | Transferencia de datos                                         | Módulo de Integraciones de Terceros | Sincronización exitosa                              | Tiempo de respuesta menor a 2 segundos                |
+| Seguridad         | ESCI-02 | Transferencia de datos     | Usuarios             | Intercambio de datos entre la aplicacion y un servicio externo | Módulo de Integraciones de Terceros | Los datos se intercambian de forma segura           | Menos de 1 caso de filtracion de datos en un año      |
+| Interoperabilidad | ESCI-03 | Operaciones normales       | Usuarios             | Sincronizacion de información                                  | Módulo de Integraciones de Terceros | Sincronización exitosa de informacion               | Mas del 99% de informacion sincronizada correctamente |
+| Mantenibilidad    | ESCI-04 | Mantenimiento de servicios | Equipo de desarrollo | Cambios en permsios de los servicios externos                  | Módulo de Integraciones de Terceros | Cambios realizados y testeados                      | Tiempo de demora del mantemiento menor a 3 horas      |
+| Seguridad         | ESCI-05 | Inicios de sesion          | Usuarios             | Inicio de sesion mediante SSO                                  | Módulo de Integraciones de Terceros | Inicio de sesion exitoso en los distintos servicios | Menos de un intento de inicio de sesiòn ilícito       |
+| Usabilidad        | ESCI-06 | Operaciones normales       | Usuarios             | Interacción con los servicios externos                         | Módulo de Integraciones de Terceros | Interfaces intuitivas y alineadas a la aplicación   | Satisfaccion de usuario mayor al 90%                  |
 
 [Regresar al índice](../../README.md)
