Módulo de Gestión de Usuarios

--- a/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
@@ -13,7 +13,7 @@
 
 | Atributo        | Código  | Entorno         | Fuente          | Estímulo        | Artefacto                     | Respuesta       | Medida de Respuesta |
 | --------------- | ------- | --------------- | --------------- | --------------- | ----------------------------- | --------------- | ------------------- |
-| _rellenar aquí_ | ESCG-01 | _rellenar aquí_ | _rellenar aquí_ | _rellenar aquí_ | Módulo de Gestión de Usuarios | _rellenar aquí_ | _rellenar aquí_     |
+| Registro e inicio de sesión con roles definidos | UCG1 | _rellenar aquí_ | Usuarios | El usuario selecciona la opción de registro en la pantalla de inicio | Página de Registro | El usuario tiene una cuenta creada y puede iniciar sesión en la aplicación. Los datos del usuario están almacenados de forma segura. | El usuario puede acceder a la aplicación con su cuenta creada.     |
 
 ## Módulo de Administración y Moderación
 
