Módulo de Gestión de Usuarios

--- a/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
@@ -13,12 +13,12 @@
 
 | Atributo        | Código  | Entorno         | Fuente          | Estímulo        | Artefacto                     | Respuesta       | Medida de Respuesta |
 | --------------- | ------- | --------------- | --------------- | --------------- | ----------------------------- | --------------- | ------------------- |
-| Registro e inicio de sesión con roles definidos | UCG1 | _rellenar aquí_ | Usuarios | El usuario selecciona la opción de registro en la pantalla de inicio | Página de Registro | El usuario tiene una cuenta creada y puede iniciar sesión en la aplicación. Los datos del usuario están almacenados de forma segura. | El usuario puede acceder a la aplicación con su cuenta creada.     |
-| Perfiles de usuario | UCG2 | _rellenar aquí_ | Usuarios | El usuario selecciona la opción de editar perfil desde el panel de usuario | Perfil de Usuario | La información del perfil del usuario se actualiza en la base de datos y se refleja en la interfaz de usuario | Los cambios se muestran en la interfaz de usuario inmediatamente.     |
-| Asignación y gestión de roles y permisos | UCG3 | _rellenar aquí_ | Administradores, Usuarios | El administrador accede al panel de administración y selecciona la opción de gestión de roles| Sistema de Roles | Los usuarios tienen roles específicos con permisos adecuados. Los cambios en los roles y permisos se guardan en la base de datos. | Los roles y permisos se actualizan correctamente y se reflejan en las operaciones del sistema.     |
-| Recuperación de contraseñas y manejo de sesiones | UCG4 | _rellenar aquí_ | Usuarios | El usuario selecciona la opción de "Olvidé mi contraseña" en la pantalla de inicio de sesión | Sistema de Recuperación de Contraseñas | El usuario recibe un enlace para restablecer su contraseña y la nueva contraseña se actualiza en la base de datos. | El usuario puede restablecer y usar la nueva contraseña para iniciar sesión.     |
-| Verificación de correo electrónico | UCG5 | _rellenar aquí_ | Usuarios | El usuario recibe un correo electrónico con un enlace de verificación tras el registro | Sistema de Verificación de Correo | La dirección de correo electrónico del usuario está verificada y la cuenta se activa. El estado de verificación se actualiza en la base de datos. | El usuario puede activar su cuenta y acceder a la aplicación tras verificar su correo.     |
-| Panel de usuario para configuraciones personales | UCG6 | _rellenar aquí_ | Usuarios | El usuario accede al panel de configuraciones personales desde su perfil | Panel de Configuraciones | Las preferencias y configuraciones del usuario se guardan en la base de datos y se reflejan en la experiencia del usuario en la aplicación | Los cambios en configuraciones se aplican y afectan la experiencia del usuario inmediatamente.     |
+| Registro e inicio de sesión con roles definidos | UCG1 | Operaciones normales | Usuarios | El usuario selecciona la opción de registro en la pantalla de inicio | Página de Registro | El usuario tiene una cuenta creada y puede iniciar sesión en la aplicación. Los datos del usuario están almacenados de forma segura. | El usuario puede acceder a la aplicación con su cuenta creada.     |
+| Perfiles de usuario | UCG2 | Operaciones normales | Usuarios | El usuario selecciona la opción de editar perfil desde el panel de usuario | Perfil de Usuario | La información del perfil del usuario se actualiza en la base de datos y se refleja en la interfaz de usuario | Los cambios se muestran en la interfaz de usuario inmediatamente.     |
+| Asignación y gestión de roles y permisos | UCG3 | Operacion de datos | Administradores, Usuarios | El administrador accede al panel de administración y selecciona la opción de gestión de roles| Sistema de Roles | Los usuarios tienen roles específicos con permisos adecuados. Los cambios en los roles y permisos se guardan en la base de datos. | Los roles y permisos se actualizan correctamente y se reflejan en las operaciones del sistema.     |
+| Recuperación de contraseñas y manejo de sesiones | UCG4 | Inicios de sesion | Usuarios | El usuario selecciona la opción de "Olvidé mi contraseña" en la pantalla de inicio de sesión | Sistema de Recuperación de Contraseñas | El usuario recibe un enlace para restablecer su contraseña y la nueva contraseña se actualiza en la base de datos. | El usuario puede restablecer y usar la nueva contraseña para iniciar sesión.     |
+| Verificación de correo electrónico | UCG5 | Inicios de sesion | Usuarios | El usuario recibe un correo electrónico con un enlace de verificación tras el registro | Sistema de Verificación de Correo | La dirección de correo electrónico del usuario está verificada y la cuenta se activa. El estado de verificación se actualiza en la base de datos. | El usuario puede activar su cuenta y acceder a la aplicación tras verificar su correo.     |
+| Panel de usuario para configuraciones personales | UCG6 | Mantenimiento de servicios | Usuarios | El usuario accede al panel de configuraciones personales desde su perfil | Panel de Configuraciones | Las preferencias y configuraciones del usuario se guardan en la base de datos y se reflejan en la experiencia del usuario en la aplicación | Los cambios en configuraciones se aplican y afectan la experiencia del usuario inmediatamente.     |
 
 ## Módulo de Administración y Moderación
 
