--- a/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.1 Asignacion de Responsabilidades.md
+++ b/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.1 Asignacion de Responsabilidades.md
@@ -1,3 +1,10 @@
 # 3.1 Asignación de Responsabilidades
 
+La aplicacion web ClassTalk estara conformada de los siguientes cuatro modulos:
+
+- **Módulo de Comunicación:** Este módulo esta enfocado en las funcionalidades esenciales de chat y mensajería de la aplicaciòn, incluyendo los chats privados y grupales.
+- **Módulo de Gestión de Usuarios:** Este módulo se encarga de todo lo que este relacionado con los perfiles de los usuarios y los roles disponibles que tiene dentro de la aplicación.
+- **Módulo de Administración y Moderación:** Este módulo esta centrado en las herramientas y funcionalidades para los administradores de la aplicación y la moderación del contenido.
+- **Módulo de Integraciones de Terceros:** Este módulo permite la integración con otras plataformas, ya sean propias o externas a la universidad, y la adición de funcionalidades extras a la aplicación.
+
 [Regresar al índice](../../README.md)
