--- a/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.2 Modelo de Coordinacion.md
+++ b/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.2 Modelo de Coordinacion.md
@@ -1,3 +1,8 @@
 # 3.2 Modelo de Coordinación
 
-[Regresar al índice](../../README.md)
+La aplicación utilizara conexiones síncronas y asíncronas para cumplir sus funciones.
+
+- **Comunicación síncrona** : Será implementada para el módulo de comunicación, mediante el chat en tiempo real, el modulo de gestión de usuarios,mediante el inicio de sesion, registro o modifación de datos y el modulo de administración y moderación, durante las herramientas de moderacion .
+- **Comunicación asíncrona** : Se implementara dentro del modulo de integracion de terceros, a través de las distintas integraciones que realizara la aplicación. Ademas, del modulo de administración y moderación, a través del panel de administración.
+
+  [Regresar al índice](../../README.md)
