Módulo de Gestión de Usuarios

--- a/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.4 Mapeo entre Elementos de Arquitectura.md
+++ b/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.4 Mapeo entre Elementos de Arquitectura.md
@@ -1,3 +1,5 @@
 # 3.4 Mapeo de Elementos de Arquitectura
 
+![Mapeo de Arqui](../../PNGs/Mapeo de Arqui.png)
+
 [Regresar al índice](../../README.md)
