--- a/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.4 Mapeo entre Elementos de Arquitectura.md
+++ b/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.4 Mapeo entre Elementos de Arquitectura.md
@@ -1,5 +1,5 @@
 # 3.4 Mapeo de Elementos de Arquitectura
 
-![Mapeo de Arqui](../../PNGs/Mapeo de Arqui.png)
+![Mapeo de Arqui](../../PNGs/Mapeo%20de%20Arqui.jpg)
 
 [Regresar al índice](../../README.md)
